BUGFIX: make Gedmo\Translatable\Entity known to the object manager
Since the version 5.3.13 (commit https://github.com/neos/flow-development-collection/commit/2f860a586753551b64785c91a87798ad124bb171) the includeClasses setting  is required to have the extension work. For earlier versions, it was still working due to some (yet unclear) behaviour.

The setting excludeClasses was deprecated much earlier and includeClasses got introduced.

Follow-up issue in the neos core:  https://github.com/neos/flow-development-collection/issues/1950

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -8,9 +8,9 @@ Sandstorm:
 Neos:
   Flow:
     object:
-      excludeClasses:
+      includeClasses:
         gedmo.doctrineextensions:
-          - 'Gedmo\\.*'
+          - 'Gedmo\\Translatable\\Entity'
     persistence:
       doctrine:
         eventListeners:
